--- a/package.json
+++ b/package.json
@@ -9,6 +9,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.7.0"
+    "axios": "^0.7.0",
+    "babel-runtime": "^5.8.25"
+  },
+  "devDependencies": {
+    "babel-core": "^5.8.25",
+    "babel-loader": "^5.3.2",
+    "html-webpack-plugin": "^1.6.1",
+    "webpack": "^1.12.2"
   }
 }
