--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
   "devDependencies": {
     "babel-core": "^5.8.25",
     "babel-loader": "^5.3.2",
+    "chai": "^3.3.0",
+    "glob": "^5.0.15",
     "html-webpack-plugin": "^1.6.1",
+    "mocha": "^2.3.3",
     "webpack": "^1.12.2",
     "webpack-dev-server": "^1.12.0"
   }
