--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "glob": "^5.0.15",
     "html-webpack-plugin": "^1.6.1",
     "mocha": "^2.3.3",
+    "underscore": "^1.8.3",
     "webpack": "^1.12.2",
     "webpack-dev-server": "^1.12.0"
   }
